did some class related editing in html and added some more css for the header

--- a/index.html
+++ b/index.html
@@ -1,22 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Online Flower Shop</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700;900&family=Open+Sans:wght@400;700;800&family=Poppins:wght@400;500;600&family=Work+Sans:ital,wght@0,400;0,700;1,800&display=swap" rel="stylesheet">
-<link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700;900&family=Open+Sans:wght@400;700;800&family=Poppins:wght@400;500;600&family=Work+Sans:ital,wght@0,400;0,700;1,800&display=swap"
+        rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <header>
         <div>
-            <h1>Let's make beautiful flowers a part of your life.</h1>
-            <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters.</p>
-            <button>Shop Now</button>
+            <h1 class="header-heading">Let's make beautiful flowers a part of your life.</h1>
+            <p class="header-description paragraph">It is a long established fact that a reader will be distracted by the readable content of a page when
+                looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution
+                of letters.</p>
+            <button class="btn">Shop Now</button>
         </div>
-        <div><img src="images/pngwing 10.png" alt=""></div>
+        <div><img src="images/pngwing 10.png" alt="" class="header-img"></div>
     </header>
 </body>
+
 </html>
