did some correction in both html and css for the header

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 of letters.</p>
             <button class="btn">Shop Now</button>
         </div>
-        <div><img src="images/pngwing 10.png" alt="" class="header-img"></div>
+        <div><img src="images/Group 58.png" alt="" class="header-img"></div>
     </header>
 </body>
 
