added css styling for featured flower section added the css classes for it in html as well also applied some shared css styling

--- a/index.html
+++ b/index.html
@@ -26,22 +26,22 @@
         <div><img src="images/Group 58.png" alt="" class="header-img"></div>
     </header>
     <main>
-        <section>
-            <h3>Our Featured Flowers</h3>
-            <p>It is a long established fact that a reader will be distracted by the readable content of a page when
+        <section class="featured-flower-container">
+            <h3 class="section-heading">Our Featured Flowers</h3>
+            <p class="paragraph">It is a long established fact that a reader will be distracted by the readable content of a page when
                 looking at its layout.</p>
-            <div>
+            <div class="flower-card-container">
                 <div>
-                    <div><img src="" alt=""></div>
-                    <a href="">Pink Flower Tree</a>
+                    <div class="flower-card card-color-1"><img src="images/pngwing 6.png" alt="" class="flower-card-img1"></div>
+                    <a href="" class="feature-flower-link">Pink Flower Tree</a>
                 </div>
                 <div>
-                    <div><img src="" alt=""></div>
-                    <a href="">Pink Flower Tree</a>
+                    <div class="flower-card card-color-2"><img src="images/pngwing 5.png" alt="" class="flower-card-img2"></div>
+                    <a href="" class="feature-flower-link">Pink Flower Tree</a>
                 </div>
                 <div>
-                    <div><img src="" alt=""></div>
-                    <a href="">Pink Flower Tree</a>
+                    <div class="flower-card card-color-3"><img src="images/pngwing 7.png" alt="" class="flower-card-img3"></div>
+                    <a href="" class="feature-flower-link">Pink Flower Tree</a>
                 </div>
             </div>
         </section>
