added css styling to the optional section

--- a/index.html
+++ b/index.html
@@ -28,38 +28,44 @@
     <main>
         <section class="featured-flower-container">
             <h3 class="section-heading">Our Featured Flowers</h3>
-            <p class="paragraph">It is a long established fact that a reader will be distracted by the readable content of a page when
+            <p class="paragraph">It is a long established fact that a reader will be distracted by the readable content
+                of a page when
                 looking at its layout.</p>
             <div class="flower-card-container">
                 <div>
-                    <div class="flower-card card-color-1"><img src="images/pngwing 6.png" alt="" class="flower-card-img1"></div>
+                    <div class="flower-card card-color-1"><img src="images/pngwing 6.png" alt=""
+                            class="flower-card-img1"></div>
                     <a href="" class="feature-flower-link">Pink Flower Tree</a>
                 </div>
                 <div>
-                    <div class="flower-card card-color-2"><img src="images/pngwing 5.png" alt="" class="flower-card-img2"></div>
+                    <div class="flower-card card-color-2"><img src="images/pngwing 5.png" alt=""
+                            class="flower-card-img2"></div>
                     <a href="" class="feature-flower-link">Pink Flower Tree</a>
                 </div>
                 <div>
-                    <div class="flower-card card-color-3"><img src="images/pngwing 7.png" alt="" class="flower-card-img3"></div>
+                    <div class="flower-card card-color-3"><img src="images/pngwing 7.png" alt=""
+                            class="flower-card-img3"></div>
                     <a href="" class="feature-flower-link">Pink Flower Tree</a>
                 </div>
             </div>
         </section>
         <section></section>
-        <section class="optional-section"><div>
-            <div class="optional-card">
-                <img src="images/Group 57.png" alt="">
-                <p>Same Day Delivery. Click & Collect.</p>
+        <section>
+            <div class="optional-section">
+                <div class="optional-card">
+                    <img src="images/Group 57.png" alt="">
+                    <p>Same Day Delivery. Click & Collect.</p>
+                </div>
+                <div class="optional-card">
+                    <img src="images/Group 58.png" alt="">
+                    <p>Fresh Flowers. Local Growers.</p>
+                </div>
+                <div class="optional-card">
+                    <img src="images/Group 59.png" alt="">
+                    <p>24/7 Free Support.</p>
+                </div>
             </div>
-            <div class="optional-card">
-                <img src="images/Group 58.png" alt="">
-                <p>Fresh Flowers. Local Growers.</p>
-            </div>
-            <div class="optional-card">
-                <img src="images/Group 59.png" alt="">
-                <p>24/7 Free Support.</p>
-            </div>
-        </div></section>
+        </section>
         <section></section>
         <section></section>
         <section></section>
