--- a/index.html
+++ b/index.html
@@ -67,9 +67,11 @@
             </div>
         </section>
         <section class="hot-deal-section">
+            <div>
             <h3>Hot Deal ! Sale Up To 25% <span>Off</span></h3>
             <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
-            <button>Sign Up</button>
+            <button>Sign Up</button></div>
+            <div><img src="images/pngwing 8.png" alt=""></div>
         </section>
         <section></section>
         <section></section>
