added the css styling for hot deal section and also added necessary classes in html for it

--- a/index.html
+++ b/index.html
@@ -68,10 +68,11 @@
         </section>
         <section class="hot-deal-section">
             <div>
-            <h3>Hot Deal ! Sale Up To 25% <span>Off</span></h3>
-            <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
-            <button>Sign Up</button></div>
-            <div><img src="images/pngwing 8.png" alt=""></div>
+            <div class="hot-deal-description-container">
+            <h3 class="section-heading">Hot Deal ! Sale Up To 25% <span>Off</span></h3>
+            <p class="paragraph">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
+            <button class="btn">Sign Up</button></div>
+            <div><img src="images/pngwing 8.png" alt=""></div></div>
         </section>
         <section></section>
         <section></section>
