--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
         </section>
 
         <section class="insta-container">
-            <h3 class="section-heading">Our Featured Flowers</h3>
+            <h3 class="section-heading">Instagram</h3>
             <p class="paragraph">It is a long established fact that a reader will be distracted by the readable
                 content
                 of a page when
