added the css styling for the subscribe section also did some correction in html structure

--- a/index.html
+++ b/index.html
@@ -103,12 +103,13 @@
         </section>
 
         <section class="subscribe-section">
-            <h3>Get The Latest Deals</h3>
-            <p>$30 coupon for first shopping</p>
-            <form action="">
-                <input type="email">
-                <button>Subscribe</button>
-            </form>
+            <div><h3 class="section-heading">Get The Latest Deals</h3>
+            <p class="paragraph">$30 coupon for first shopping</p>
+            <form action="" class="subscription-form">
+                <input type="email" placeholder="Enter your email here...">
+                <button class="btn">Subscribe</button>
+            </form></div>
+            
         </section>
     </main>
 </body>
