--- a/index.html
+++ b/index.html
@@ -103,19 +103,22 @@
         </section>
 
         <section class="subscribe-section">
-            <div><h3 class="section-heading">Get The Latest Deals</h3>
-            <p class="paragraph">$30 coupon for first shopping</p>
-            <form action="" class="subscription-form">
-                <input type="email" placeholder="Enter your email here...">
-                <button class="btn">Subscribe</button>
-            </form></div>
-            
+            <div>
+                <h3 class="section-heading">Get The Latest Deals</h3>
+                <p class="paragraph">$30 coupon for first shopping</p>
+                <form action="" class="subscription-form">
+                    <input type="email" placeholder="Enter your email here...">
+                    <button class="btn">Subscribe</button>
+                </form>
+            </div>
+
         </section>
     </main>
 
     <footer>
         <h3 class="section-heading footer-heading"><span>Flower</span>Shop</h3>
-        <p class="paragraph">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
+        <p class="paragraph footer-description">It is a long established fact that a reader will be distracted by the readable content of a
+            page when looking at its layout.</p>
         <small>&commat;2020-2023, FlowerShop.com. All rights reserved. </small>
     </footer>
 </body>
