added meaningful texts for the new customized bouquet section

--- a/index.html
+++ b/index.html
@@ -53,10 +53,9 @@
             <div>
                 <div><img src="images/pngwing 8.png" alt=""></div>
                 <div class="">
-                    <h3 class="section-heading">Hot Deal ! Sale Up To 25% <span>Off</span></h3>
-                    <p class="paragraph">It is a long established fact that a reader will be distracted by the readable
-                        content of a page when looking at its layout.</p>
-                    <button class="btn">Sign Up</button>
+                    <h3 class="section-heading">Customized Bouquets</h3>
+                    <p class="paragraph">Get your dream bouquet for your loved ones on special events. Order customized bouquets by selecting charming flowers of your choice.</p>
+                    <button class="btn">Order Now</button>
                 </div>
             </div>
         </section>
