added a new customized image and css styling for the customized bouquet section

--- a/index.html
+++ b/index.html
@@ -51,10 +51,11 @@
         </section>
         <section class="new-section">
             <div>
-                <div><img src="images/pngwing 8.png" alt=""></div>
-                <div class="">
+                <div class="new-section-img-container"><img src="images/Picture1.png" alt=""></div>
+                <div class="new-section-description-container">
                     <h3 class="section-heading">Customized Bouquets</h3>
-                    <p class="paragraph">Get your dream bouquet for your loved ones on special events. Order customized bouquets by selecting charming flowers of your choice.</p>
+                    <p class="paragraph">Get your dream bouquet for your loved ones on special events. Order customized
+                        bouquets by selecting charming flowers of your choice.</p>
                     <button class="btn">Order Now</button>
                 </div>
             </div>
@@ -116,7 +117,8 @@
 
     <footer>
         <h3 class="section-heading footer-heading"><span>Flower</span>Shop</h3>
-        <p class="paragraph footer-description">It is a long established fact that a reader will be distracted by the readable content of a
+        <p class="paragraph footer-description">It is a long established fact that a reader will be distracted by the
+            readable content of a
             page when looking at its layout.</p>
         <small>&commat;2020-2023, FlowerShop.com. All rights reserved. </small>
     </footer>
