added comments for all the sections in index.html file

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 </head>
 
 <body>
+    <!-- header start -->
     <header>
         <div>
             <h1 class="header-heading">Let's make beautiful flowers a part of your life.</h1>
@@ -25,7 +26,13 @@
         </div>
         <div><img src="images/Group 58.png" alt="" class="header-img"></div>
     </header>
+    <!-- header end -->
+
+    <!-- main section start -->
     <main>
+
+        <!-- featured flower section start -->
+
         <section class="featured-flower-container">
             <h3 class="section-heading">Our Featured Flowers</h3>
             <p class="paragraph">It is a long established fact that a reader will be distracted by the readable content
@@ -49,6 +56,12 @@
                 </div>
             </div>
         </section>
+
+        <!-- featured flower section end -->
+
+
+        <!-- customized bouquet section starts -->
+
         <section class="new-section">
             <div>
                 <div class="new-section-img-container"><img src="images/Picture1.png" alt=""></div>
@@ -60,6 +73,12 @@
                 </div>
             </div>
         </section>
+
+        <!-- customized bouquet section ends -->
+
+
+        <!-- optional section starts -->
+
         <section>
             <div class="optional-section">
                 <div class="optional-card">
@@ -76,6 +95,12 @@
                 </div>
             </div>
         </section>
+
+        <!-- optional section ends -->
+
+
+        <!-- hot deal section starts -->
+
         <section class="hot-deal-section">
             <div>
                 <div class="hot-deal-description-container">
@@ -87,6 +112,11 @@
                 <div><img src="images/pngwing 8.png" alt=""></div>
             </div>
         </section>
+
+        <!-- hot deal section ends -->
+
+
+        <!-- instagram section starts -->
 
         <section class="insta-container">
             <h3 class="section-heading">Instagram</h3>
@@ -102,6 +132,11 @@
             </div>
         </section>
 
+        <!-- instagram section ends -->
+
+        
+        <!-- subscription section starts -->
+
         <section class="subscribe-section">
             <div>
                 <h3 class="section-heading">Get The Latest Deals</h3>
@@ -113,8 +148,13 @@
             </div>
 
         </section>
-    </main>
 
+        <!-- subscription section ends -->
+
+    </main>
+    <!-- main section end -->
+
+    <!-- footer start -->
     <footer>
         <h3 class="section-heading footer-heading"><span>Flower</span>Shop</h3>
         <p class="paragraph footer-description">It is a long established fact that a reader will be distracted by the
@@ -122,6 +162,7 @@
             page when looking at its layout.</p>
         <small>&commat;2020-2023, FlowerShop.com. All rights reserved. </small>
     </footer>
+    <!-- footer end -->
 </body>
 
 </html>
