did some corrections in both html and css files

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                         content of a page when looking at its layout.</p>
                     <button class="btn">Sign Up</button>
                 </div>
-                <div><img src="images/pngwing 8.png" alt=""></div>
+                <div class="hot-deal-image-container"><img src="images/pngwing 8.png" alt=""></div>
             </div>
         </section>
 
@@ -134,7 +134,7 @@
 
         <!-- instagram section ends -->
 
-        
+
         <!-- subscription section starts -->
 
         <section class="subscribe-section">
