wrote the alt message for the images in html file

--- a/index.html
+++ b/index.html
@@ -39,17 +39,17 @@
                 looking at its layout.</p>
             <div class="flower-card-container">
                 <div>
-                    <div class="flower-card card-color-1"><img src="images/pngwing 6.png" alt=""
+                    <div class="flower-card card-color-1"><img src="images/pngwing 6.png" alt="Image of flower"
                             class="flower-card-img1"></div>
                     <a href="" class="feature-flower-link">Pink Flower Tree</a>
                 </div>
                 <div>
-                    <div class="flower-card card-color-2"><img src="images/pngwing 5.png" alt=""
+                    <div class="flower-card card-color-2"><img src="images/pngwing 5.png" alt="Image of flower"
                             class="flower-card-img2"></div>
                     <a href="" class="feature-flower-link">Pink Flower Tree</a>
                 </div>
                 <div>
-                    <div class="flower-card card-color-3"><img src="images/pngwing 7.png" alt=""
+                    <div class="flower-card card-color-3"><img src="images/pngwing 7.png" alt="Image of flower"
                             class="flower-card-img3"></div>
                     <a href="" class="feature-flower-link">Pink Flower Tree</a>
                 </div>
@@ -63,7 +63,7 @@
 
         <section class="new-section">
             <div>
-                <div class="new-section-img-container"><img src="images/Picture1.png" alt=""></div>
+                <div class="new-section-img-container"><img src="images/Picture1.png" alt="Image of flower"></div>
                 <div class="new-section-description-container">
                     <h3 class="section-heading">Customized Bouquets</h3>
                     <p class="paragraph">Get your dream bouquet for your loved ones on special events. Order customized
@@ -81,15 +81,15 @@
         <section>
             <div class="optional-section">
                 <div class="optional-card">
-                    <img src="images/Group 57.png" alt="">
+                    <img src="images/Group 57.png" alt="Image of flower">
                     <p>Same Day Delivery. Click & Collect.</p>
                 </div>
                 <div class="optional-card">
-                    <img src="images/Group 58.png" alt="">
+                    <img src="images/Group 58.png" alt="Image of flower">
                     <p>Fresh Flowers. Local Growers.</p>
                 </div>
                 <div class="optional-card">
-                    <img src="images/Group 59.png" alt="">
+                    <img src="images/Group 59.png" alt="Image of flower">
                     <p>24/7 Free Support.</p>
                 </div>
             </div>
@@ -108,7 +108,7 @@
                         content of a page when looking at its layout.</p>
                     <button class="btn">Sign Up</button>
                 </div>
-                <div class="hot-deal-image-container"><img src="images/pngwing 8.png" alt=""></div>
+                <div class="hot-deal-image-container"><img src="images/pngwing 8.png" alt="Image of flower"></div>
             </div>
         </section>
 
@@ -124,10 +124,10 @@
                 of a page when
                 looking at its layout.</p>
             <div class="flower-image-container">
-                <img src="images/Flower 01.png" alt="">
-                <img src="images/Rectangle 4.png" alt="">
-                <img src="images/Rectangle 5.png" alt="">
-                <img src="images/Rectangle 6.png" alt="">
+                <img src="images/Flower 01.png" alt="Image of flower">
+                <img src="images/Rectangle 4.png" alt="Image of flower">
+                <img src="images/Rectangle 5.png" alt="Image of flower">
+                <img src="images/Rectangle 6.png" alt="Image of flower">
             </div>
         </section>
 
